# esp32-streamer

./: .gitignore  README.md  pubspec.yaml
client/: pubspec.yaml
client/lib/: camera.dart  config.dart  custom_form.dart  home_page.dart  login_page.dart  main.dart  mosquitto_manager.dart  translation_page.dart
esp32_client/: CMakeLists.txt  README.md  esp32_client.ino  esp32_setup.h  module_info.h.example  sdkconfig.defaults  wifi_setup.h
esp32_client/main/: CMakeLists.txt  ca.pem  camera.c  camera.h  esp32_client.c  module_info.c.example  module_info.h  wifi_setup.c  wifi_setup.h
lib/: custom_form.dart  home_page.dart  login_page.dart  main_page.dart
sensor_monitoring/: .gitignore  go.mod  go.sum
sensor_monitoring/cmd/monitor/: main.go
sensor_monitoring/configs/: monitor.conf.json
sensor_monitoring/init/: monitor.service
sensor_monitoring/internal/config/: config.go
sensor_monitoring/internal/cv/: cv.go
sensor_monitoring/internal/models/: models.go
sensor_monitoring/internal/monitor/: monitor.go
test_camera_client/: CMakeLists.txt  emu.c  recv.c  test.c
